[package]
name = "bmbp_plugin_schelude"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "任务调度管理"
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
